<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/mainMargin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/iv_textSize"
            android:textColor="@color/black"
            android:id="@+id/iv_name"
            android:layout_weight="3"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/name"
            android:id="@+id/iv_et_name"
            android:enabled="false"
            android:textColor="@color/black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginHorizontal="@dimen/mainMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:id="@+id/iv_author"
            android:layout_weight="3"
            android:textSize="@dimen/iv_textSize"
            android:textColor="@color/black" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/author"
            android:id="@+id/iv_et_author"
            android:enabled="false"
            android:textColor="@color/black" />
    </LinearLayout>
    <TextView
        android:layout_marginHorizontal="@dimen/mainMargin"
        android:layout_marginTop="@dimen/mainMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/iv_description"
        android:textSize="@dimen/iv_textSize"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/iv_et_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/mainMargin"
        android:layout_marginBottom="@dimen/mainMargin"
        android:layout_weight="1"
        android:enabled="false"
        android:gravity="top"
        android:textColor="@color/black"
        android:background="@drawable/back"
        android:padding="@dimen/mainMargin" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/iv_btn_cancel"
            android:visibility="invisible"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accept"
            android:id="@+id/iv_btn_accept"
            android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>